--- a/classes.html
+++ b/classes.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>نظام المعهد - إدارة الحصص</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;visibility:hidden;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;display:flex;align-items:center;justify-content:space-between;}
-header img{height:40px;}
-.wrap{max-width:1400px;margin:22px auto;padding:12px;}
+body{font-family:'Cairo',sans-serif;margin:0;padding:20px;background:#f5f9ff;color:#102027;visibility:hidden;}
+header{background:#004aad;color:#fff;padding:15px;text-align:center;font-size:20px;font-weight:700;display:flex;align-items:center;justify-content:center;gap:15px;}
+header img{height:50px;}
+.wrap{max-width:1200px;margin:auto;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
 input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
 label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-top:6px;}
+.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
 .btn.warn{background:#ff7043;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.day-column{vertical-align:top;width:14%;min-width:150px;}
-.lesson-box{border-radius:8px;padding:8px;margin-bottom:8px;color:#fff;}
+.schedule-grid{display:flex;gap:10px;flex-wrap:wrap;}
+.day-column{flex:1;min-width:150px;}
+.day-column h3{text-align:center;background:#004aad;color:#fff;padding:6px;border-radius:6px;}
+.lesson-box{border-radius:6px;color:#fff;padding:8px;margin:6px 0;}
 @media print{
   body{background:white;}
-  header,.filters,.actions,.card button,.card form{display:none !important;}
-  .wrap{padding:0;}
+  header, .card, .btn, .filters{display:none !important;}
+  .day-column h3{background:#004aad !important;color:#fff !important;}
 }
 </style>
 </head>
@@ -30,22 +32,19 @@ th{background:#004aad;color:#fff;}
 <header>
   <img id="instituteLogo" src="" alt="شعار المعهد">
   <span id="instituteName">اسم المعهد</span>
-  <button onclick="window.print()" class="btn">🖨️ طباعة الجدول</button>
 </header>
-<div class="wrap">
 
-<div class="card">
-  <strong>أضف حصة جديدة</strong>
-  <form id="classForm">
+<div class="wrap">
+  <div class="card filters">
+    <strong>فلترة الحصص للطباعة</strong>
     <label>المادة</label>
-    <select id="subjectSelect" required></select>
+    <select id="filterSubject"><option value="">الكل</option></select>
     <label>الأستاذ</label>
-    <select id="teacherSelect" required></select>
-    <label>المجموعة / الكروب</label>
-    <select id="groupSelect" required></select>
+    <select id="filterTeacher"><option value="">الكل</option></select>
+    <label>الكروب</label>
+    <select id="filterGroup"><option value="">الكل</option></select>
     <label>القاعة</label>
-    <select id="roomSelect" required>
-      <option value="">اختر القاعة</option>
+    <select id="filterRoom"><option value="">الكل</option>
       <option value="قاعة 1">قاعة 1</option>
       <option value="قاعة 2">قاعة 2</option>
       <option value="قاعة 3">قاعة 3</option>
@@ -58,34 +57,25 @@ th{background:#004aad;color:#fff;}
       <option value="قاعة 10">قاعة 10</option>
     </select>
     <label>اليوم</label>
-    <select id="daySelect" required>
+    <select id="filterDay"><option value="">الكل</option>
       <option value="السبت">السبت</option>
       <option value="الأحد">الأحد</option>
-      <option value="الاثنين">الاثنين</option>
+      <option value="الإثنين">الإثنين</option>
       <option value="الثلاثاء">الثلاثاء</option>
       <option value="الأربعاء">الأربعاء</option>
       <option value="الخميس">الخميس</option>
       <option value="الجمعة">الجمعة</option>
     </select>
-    <label>وقت البدء</label>
-    <input id="startTime" type="time" required>
-    <label>وقت الانتهاء</label>
-    <input id="endTime" type="time" required>
-    <button type="submit" class="btn">✅ حفظ الحصة</button>
-  </form>
-</div>
+    <button id="printBtn" class="btn" style="margin-top:8px;">🖨️ طباعة الجدول</button>
+  </div>
 
-<div class="card">
-  <strong>جدول الحصص الأسبوعي</strong>
-  <div id="timetable" style="display:flex;justify-content:space-between;"></div>
-</div>
-
+  <div id="printArea" class="schedule-grid"></div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 // إعداد Firebase
 const firebaseConfig = {
@@ -96,142 +86,116 @@ const firebaseConfig = {
   messagingSenderId: "899300774863",
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-// عناصر الصفحة
-const classForm = document.getElementById("classForm");
-const subjectSelect = document.getElementById("subjectSelect");
-const teacherSelect = document.getElementById("teacherSelect");
-const groupSelect = document.getElementById("groupSelect");
-const roomSelect = document.getElementById("roomSelect");
-const startTime = document.getElementById("startTime");
-const endTime = document.getElementById("endTime");
-const daySelect = document.getElementById("daySelect");
-const timetableDiv = document.getElementById("timetable");
+const filterSubject = document.getElementById("filterSubject");
+const filterTeacher = document.getElementById("filterTeacher");
+const filterGroup = document.getElementById("filterGroup");
+const filterRoom = document.getElementById("filterRoom");
+const filterDay = document.getElementById("filterDay");
+const printBtn = document.getElementById("printBtn");
+const printArea = document.getElementById("printArea");
 
-let subjectsList=[], teachersList=[], groupsList=[], classesData=[], colorsMap={};
-let instituteNameElem = document.getElementById("instituteName");
-let instituteLogoElem = document.getElementById("instituteLogo");
+let subjectsList=[], teachersList=[], groupsList=[], classesData=[], settings={colors:{}};
 
-// التحقق من تسجيل الدخول
 onAuthStateChanged(auth, async (user)=>{
-  if(!user) { window.location.href="login.html"; return; }
+  if(!user){ window.location.href="login.html"; return; }
   document.body.style.visibility="visible";
-  await loadInstituteSettings();
+  await loadSettings();
   await loadSubjectsTeachersGroups();
   await loadClasses();
 });
 
-// جلب بيانات المعهد والألوان
-async function loadInstituteSettings(){
-  const settingsSnap = await getDocs(collection(db,"settings"));
-  settingsSnap.forEach(docSnap=>{
-    const data = docSnap.data();
-    if(data.name) instituteNameElem.textContent = data.name;
-    if(data.logo) instituteLogoElem.src = data.logo;
-    if(data.colors) colorsMap = data.colors; // { "رياضيات": "#ff0000", "فيزياء": "#00ff00", ...}
+// جلب إعدادات المعهد (الشعار، الاسم، ألوان الحصص)
+async function loadSettings(){
+  const docSnap = await getDocs(collection(db,"settings"));
+  docSnap.forEach(doc=>{
+    const data = doc.data();
+    settings.name = data.name || "اسم المعهد";
+    settings.logo = data.logo || "";
+    settings.colors = data.colors || {};
   });
+  document.getElementById("instituteLogo").src = settings.logo;
+  document.getElementById("instituteName").textContent = settings.name;
 }
 
-// جلب المواد، الأساتذة، الكروبات
+// تحميل المواد، الأساتذة، الكروبات
 async function loadSubjectsTeachersGroups(){
   subjectsList = [];
   teachersList = [];
   groupsList = [];
-
   const studentsSnap = await getDocs(collection(db,"students"));
-  const subjectsSet = new Set();
-  const groupsSet = new Set();
+  const subjectsSet = new Set(), groupsSet = new Set();
   studentsSnap.forEach(s=>{
     s.data().subjects?.forEach(sub=>subjectsSet.add(sub.name));
     if(s.data().group) groupsSet.add(s.data().group);
   });
-  subjectsList = [...subjectsSet];
-  groupsList = [...groupsSet];
+  subjectsList=[...subjectsSet];
+  groupsList=[...groupsSet];
 
   const teachersSnap = await getDocs(collection(db,"teachers"));
-  teachersSnap.forEach(t=>{teachersList.push({id:t.id,...t.data()});});
+  teachersSnap.forEach(t=>teachersList.push({id:t.id,...t.data()}));
 
-  // تعبئة القوائم
-  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
-  subjectsList.forEach(s=>subjectSelect.innerHTML+=`<option value="${s}">${s}</option>`);
-
-  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
-  teachersList.forEach(t=>teacherSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`);
-
-  groupSelect.innerHTML="<option value=''>اختر الكروب</option>";
-  groupsList.forEach(g=>groupSelect.innerHTML+=`<option value="${g}">${g}</option>`);
+  // تعبئة قوائم الفلاتر
+  filterSubject.innerHTML="<option value=''>الكل</option>";
+  subjectsList.forEach(s=>filterSubject.innerHTML+=`<option value="${s}">${s}</option>`);
+  filterTeacher.innerHTML="<option value=''>الكل</option>";
+  teachersList.forEach(t=>filterTeacher.innerHTML+=`<option value="${t.id}">${t.name}</option>`);
+  filterGroup.innerHTML="<option value=''>الكل</option>";
+  groupsList.forEach(g=>filterGroup.innerHTML+=`<option value="${g}">${g}</option>`);
 }
-
-// حفظ الحصة مع التأكد من عدم التعارض
-classForm.addEventListener("submit", async e=>{
-  e.preventDefault();
-  const newClass = {
-    subject: subjectSelect.value,
-    teacherId: teacherSelect.value,
-    group: groupSelect.value,
-    room: roomSelect.value,
-    day: daySelect.value,
-    startTime: startTime.value,
-    endTime: endTime.value
-  };
-
-  // التأكد من عدم التعارض
-  const conflict = classesData.find(c=>c.day===newClass.day && (
-    (c.teacherId===newClass.teacherId) || 
-    (c.group===newClass.group) || 
-    (c.room===newClass.room)
-  ) && ((newClass.startTime < c.endTime) && (newClass.endTime > c.startTime)) );
-  
-  if(conflict){
-    alert("❌ هناك تعارض مع حصة موجودة");
-    return;
-  }
-
-  await addDoc(collection(db,"classes"), newClass);
-  alert("✅ تم حفظ الحصة");
-  classForm.reset();
-  await loadClasses();
-});
 
 // تحميل الحصص
 async function loadClasses(){
   const snapshot = await getDocs(collection(db,"classes"));
   classesData = [];
-  snapshot.forEach(docSnap=>classesData.push({id:docSnap.id,...docSnap.data()}));
-  renderTimetable();
+  snapshot.forEach(docSnap=>{
+    const cls = {id: docSnap.id, ...docSnap.data()};
+    classesData.push(cls);
+  });
+  renderSchedule();
 }
 
-// عرض الجدول
-function renderTimetable(){
-  timetableDiv.innerHTML="";
-  const days = ["السبت","الأحد","الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة"];
+// عرض الجدول حسب الفلاتر
+function renderSchedule(){
+  const days = ["السبت","الأحد","الإثنين","الثلاثاء","الأربعاء","الخميس","الجمعة"];
+  printArea.innerHTML = "";
+  const filtered = classesData.filter(cls=>{
+    return (!filterSubject.value || cls.subject===filterSubject.value) &&
+           (!filterTeacher.value || cls.teacherId===filterTeacher.value) &&
+           (!filterGroup.value || cls.group===filterGroup.value) &&
+           (!filterRoom.value || cls.room===filterRoom.value) &&
+           (!filterDay.value || cls.day===filterDay.value);
+  });
+
   days.forEach(day=>{
-    const dayDiv = document.createElement("div");
-    dayDiv.classList.add("day-column");
-    dayDiv.innerHTML=`<strong>${day}</strong>`;
-    const dayClasses = classesData.filter(c=>c.day===day).sort((a,b)=>a.startTime.localeCompare(b.startTime));
+    const col = document.createElement("div");
+    col.className="day-column";
+    col.innerHTML=`<h3>${day}</h3>`;
+    const dayClasses = filtered.filter(c=>c.day===day).sort((a,b)=>{
+      return a.startTime.localeCompare(b.startTime);
+    });
     dayClasses.forEach(c=>{
       const teacherName = (teachersList.find(t=>t.id===c.teacherId)||{}).name || "غير معروف";
-      const color = colorsMap[c.subject] || "#004aad";
+      const color = settings.colors[c.subject] || "#004aad";
       const box = document.createElement("div");
-      box.classList.add("lesson-box");
-      box.style.background=color;
-      box.innerHTML=`
-        <strong>${c.subject}</strong><br>
-        ${teacherName}<br>
-        ${c.group}<br>
-        ${c.room}<br>
-        ${c.startTime} - ${c.endTime}
-      `;
-      dayDiv.appendChild(box);
+      box.className="lesson-box";
+      box.style.backgroundColor=color;
+      box.innerHTML = `<strong>${c.subject}</strong>
+        <p>الأستاذ: ${teacherName}</p>
+        <p>الكروب: ${c.group}</p>
+        <p>القاعة: ${c.room}</p>
+        <p>الوقت: ${c.startTime} - ${c.endTime}</p>`;
+      col.appendChild(box);
     });
-    timetableDiv.appendChild(dayDiv);
+    printArea.appendChild(col);
   });
 }
+
+// زر الطباعة
+printBtn.addEventListener("click", ()=>{ renderSchedule(); window.print(); });
 </script>
 </body>
 </html>
