--- a/attendance.html
+++ b/attendance.html
@@ -1,104 +1,88 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - إدارة الحصص</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>الحضور والغياب - المعهد</title>
 <style>
-body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
-header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
-.wrap{max-width:1200px;margin:22px auto;padding:12px;}
+body { font-family:'Cairo',sans-serif; margin:0; padding:20px; background:#f5f9ff; color:#102027; visibility:hidden; }
+header { padding:20px; text-align:center; font-size:20px; font-weight:bold; display:flex; align-items:center; justify-content:center; gap:12px; }
+header img { height:50px; }
+.wrap{max-width:1200px;margin:20px auto;}
 .card{background:#fff;border-radius:10px;padding:14px;margin-bottom:16px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
-.btn{background:#004aad;color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
-.btn.warn{background:#ff7043;}
+label{display:block;margin:6px 0 4px;font-size:13px;color:#37474f;}
+select, input[type=date]{width:100%;padding:10px;border:1px solid #d6dde9;border-radius:8px;margin-bottom:8px;font-size:15px;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
+th,td{padding:10px;border:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.filters{display:flex;flex-wrap:wrap;gap:10px;margin-bottom:10px;align-items:center;}
+.btn{background:#004aad;color:#fff;padding:8px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;}
+.btn.warn{background:#ff7043;}
 @media print{
   body{background:white;}
-  header,.filters,.btn{display:none !important;}
+  header,.filters,.actions,.btn{display:none !important;}
   table{page-break-inside:avoid;}
 }
+.status-select{padding:6px;border-radius:6px;border:1px solid #ccc;}
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الحصص</header>
+
+<header>
+  <img id="instituteLogo" src="" alt="شعار المعهد">
+  <span id="instituteName">اسم المعهد</span>
+</header>
+
 <div class="wrap">
 
-<!-- نموذج إضافة حصة -->
-<div class="card">
-  <strong>أضف حصة جديدة</strong>
-  <form id="classForm">
+  <div class="card filters">
+    <strong>فلترة الحصص</strong>
     <label>المادة</label>
-    <select id="subjectSelect" required></select>
+    <select id="filterSubject"><option value="">الكل</option></select>
     <label>الأستاذ</label>
-    <select id="teacherSelect" required></select>
-    <label>المجموعة / الكروب</label>
-    <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
+    <select id="filterTeacher"><option value="">الكل</option></select>
+    <label>المجموعة</label>
+    <select id="filterGroup"><option value="">الكل</option></select>
     <label>اليوم</label>
-    <select id="daySelect" required>
+    <select id="filterDay">
+      <option value="">الكل</option>
       <option value="الاثنين">الاثنين</option>
       <option value="الثلاثاء">الثلاثاء</option>
       <option value="الأربعاء">الأربعاء</option>
       <option value="الخميس">الخميس</option>
       <option value="الجمعة">الجمعة</option>
+      <option value="السبت">السبت</option>
+      <option value="الأحد">الأحد</option>
     </select>
-    <label>الوقت</label>
-    <input id="timeInput" type="time" required>
-    <button type="submit" class="btn">✅ حفظ الحصة</button>
-  </form>
-</div>
+    <button id="filterBtn" class="btn" style="margin-top:8px;">تطبيق الفلتر</button>
+    <button id="printBtn" class="btn" style="margin-top:8px;">طباعة التقرير</button>
+  </div>
 
-<!-- فلاتر البحث والطباعة -->
-<div class="card filters">
-  <label>فلتر المادة</label>
-  <select id="filterSubject">
-    <option value="">الكل</option>
-  </select>
-  <label>فلتر الأستاذ</label>
-  <select id="filterTeacher">
-    <option value="">الكل</option>
-  </select>
-  <label>فلتر المجموعة</label>
-  <input id="filterGroup" type="text" placeholder="اسم الكروب">
-  <label>فلتر اليوم</label>
-  <select id="filterDay">
-    <option value="">الكل</option>
-    <option value="الاثنين">الاثنين</option>
-    <option value="الثلاثاء">الثلاثاء</option>
-    <option value="الأربعاء">الأربعاء</option>
-    <option value="الخميس">الخميس</option>
-    <option value="الجمعة">الجمعة</option>
-  </select>
-  <button class="btn" id="printBtn">🖨️ طباعة</button>
-</div>
+  <div class="card">
+    <strong>قائمة الحصص والطلاب</strong>
+    <table id="attendanceTable">
+      <thead>
+        <tr>
+          <th>المادة</th>
+          <th>الأستاذ</th>
+          <th>المجموعة</th>
+          <th>اليوم</th>
+          <th>وقت البداية</th>
+          <th>وقت النهاية</th>
+          <th>الطلاب</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
 
-<!-- جدول الحصص -->
-<div class="card">
-  <strong>قائمة الحصص</strong>
-  <table id="classesTable">
-    <thead>
-      <tr>
-        <th>المادة</th>
-        <th>الأستاذ</th>
-        <th>المجموعة</th>
-        <th>اليوم</th>
-        <th>الوقت</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// 🔹 إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -108,145 +92,153 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
-
-const classForm = document.getElementById("classForm");
-const subjectSelect = document.getElementById("subjectSelect");
-const teacherSelect = document.getElementById("teacherSelect");
-const classesTableBody = document.querySelector("#classesTable tbody");
 
 const filterSubject = document.getElementById("filterSubject");
 const filterTeacher = document.getElementById("filterTeacher");
 const filterGroup = document.getElementById("filterGroup");
 const filterDay = document.getElementById("filterDay");
+const filterBtn = document.getElementById("filterBtn");
 const printBtn = document.getElementById("printBtn");
+const tableBody = document.querySelector("#attendanceTable tbody");
 
-let classesData = [];
-let subjectsMap = new Map();
-let teachersMap = new Map();
+let subjectsList=[], teachersList=[], groupsList=[], classesData=[], instituteData={};
 
-// تحقق تسجيل الدخول بدون مشاكل الخروج
-onAuthStateChanged(auth, async(user)=>{
-  if(!user){
-    window.location.href="login.html";
+// 🔑 التحقق من تسجيل الدخول
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    window.location.href = "login.html";
     return;
   }
   document.body.style.visibility = "visible";
-  await loadSubjectsAndTeachers();
-  loadClasses();
+
+  await loadInstituteData();
+  await loadSubjectsTeachersGroups();
+  await loadClasses();
 });
 
-// تحميل المواد والأساتذة
-async function loadSubjectsAndTeachers(){
-  // المواد من الطلاب
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const subjectsSet = new Set();
-  studentsSnap.forEach(snap=>{
-    snap.data().subjects.forEach(sub=>subjectsSet.add(sub.name));
-  });
-  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
-  filterSubject.innerHTML="<option value=''>الكل</option>";
-  subjectsSet.forEach(sub=>{
-    subjectSelect.innerHTML+=`<option value="${sub}">${sub}</option>`;
-    filterSubject.innerHTML+=`<option value="${sub}">${sub}</option>`;
-    subjectsMap.set(sub,sub);
-  });
-
-  // الأساتذة
-  const teachersSnap = await getDocs(collection(db,"teachers"));
-  teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
-  filterTeacher.innerHTML="<option value=''>الكل</option>";
-  teachersSnap.forEach(snap=>{
-    const t = snap.data();
-    teacherSelect.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
-    filterTeacher.innerHTML+=`<option value="${snap.id}">${t.name}</option>`;
-    teachersMap.set(snap.id,t.name);
+// تحميل بيانات المعهد
+async function loadInstituteData(){
+  const settingsSnap = await getDocs(collection(db,"settings"));
+  settingsSnap.forEach(docSnap=>{
+    instituteData = docSnap.data();
+    document.getElementById("instituteName").textContent = instituteData.name || "اسم المعهد";
+    document.getElementById("instituteLogo").src = instituteData.logo || "";
   });
 }
 
-// حفظ الحصة
-classForm.addEventListener("submit", async(e)=>{
-  e.preventDefault();
-  const subject = subjectSelect.value;
-  const teacherId = teacherSelect.value;
-  const group = document.getElementById("groupInput").value.trim();
-  const day = document.getElementById("daySelect").value;
-  const time = document.getElementById("timeInput").value;
+// تحميل المواد، الأساتذة، المجموعات
+async function loadSubjectsTeachersGroups(){
+  subjectsList = [];
+  teachersList = [];
+  groupsList = [];
 
-  // جلب الطلاب من نفس الكروب
   const studentsSnap = await getDocs(collection(db,"students"));
-  const groupStudents = [];
-  studentsSnap.forEach(snap=>{
-    const s = snap.data();
-    if(s.group===group){
-      groupStudents.push({id:snap.id,name:s.name});
+  const subjectsSet = new Set();
+  const groupsSet = new Set();
+  studentsSnap.forEach(s=>{
+    s.data().subjects?.forEach(sub=>subjectsSet.add(sub.name));
+    if(s.data().group) groupsSet.add(s.data().group);
+  });
+  subjectsList = [...subjectsSet];
+  groupsList = [...groupsSet];
+
+  const teachersSnap = await getDocs(collection(db,"teachers"));
+  teachersSnap.forEach(t=>{teachersList.push({id:t.id,...t.data()});});
+
+  // تعبئة القوائم
+  subjectsList.forEach(sub=>{filterSubject.innerHTML += `<option value="${sub}">${sub}</option>`;});
+  teachersList.forEach(t=>{filterTeacher.innerHTML += `<option value="${t.id}">${t.name}</option>`;});
+  groupsList.forEach(g=>{filterGroup.innerHTML += `<option value="${g}">${g}</option>`;});
+}
+
+// تحميل الحصص
+async function loadClasses(filter={}){
+  const snapshot = await getDocs(collection(db,"classes"));
+  tableBody.innerHTML = "";
+  classesData = [];
+
+  snapshot.forEach(docSnap=>{
+    const cls = {id: docSnap.id, ...docSnap.data()};
+    if((!filter.subject || cls.subject===filter.subject) &&
+       (!filter.teacher || cls.teacherId===filter.teacher) &&
+       (!filter.group || cls.group===filter.group) &&
+       (!filter.day || cls.day===filter.day)){
+      classesData.push(cls);
     }
   });
 
-  await addDoc(collection(db,"classes"),{subject,teacherId,group,day,time,students:groupStudents,attendance:[]});
-  alert("تم حفظ الحصة بنجاح");
-  classForm.reset();
-  loadClasses();
-});
-
-// تحميل الحصص
-async function loadClasses(){
-  const snapshot = await getDocs(collection(db,"classes"));
-  classesData = [];
-  classesTableBody.innerHTML="";
-  snapshot.forEach(docSnap=>{
-    const cls = {...docSnap.data(),id:docSnap.id};
-    classesData.push(cls);
+  // ترتيب حسب اليوم والوقت
+  const daysOrder = ["الاثنين","الثلاثاء","الأربعاء","الخميس","الجمعة","السبت","الأحد"];
+  classesData.sort((a,b)=>{
+    const dayDiff = daysOrder.indexOf(a.day) - daysOrder.indexOf(b.day);
+    if(dayDiff!==0) return dayDiff;
+    return a.startTime.localeCompare(b.startTime);
   });
-  renderClassesTable();
-}
 
-// عرض الجدول مع الفلاتر
-function renderClassesTable(){
-  classesTableBody.innerHTML="";
-  const fSubject = filterSubject.value;
-  const fTeacher = filterTeacher.value;
-  const fGroup = filterGroup.value.trim();
-  const fDay = filterDay.value;
-
+  // عرض الحصص
   classesData.forEach(cls=>{
-    if(fSubject && cls.subject!==fSubject) return;
-    if(fTeacher && cls.teacherId!==fTeacher) return;
-    if(fGroup && cls.group!==fGroup) return;
-    if(fDay && cls.day!==fDay) return;
-
+    const teacherName = (teachersList.find(t=>t.id===cls.teacherId)||{}).name || "غير معروف";
+    const studentCells = cls.students.map(st=>{
+      const status = cls.attendance.find(a=>a.id===st.id)?.status || "";
+      return `<div>
+        ${st.name}
+        <select class="status-select" data-class="${cls.id}" data-student="${st.id}">
+          <option value="">-</option>
+          <option value="حاضر" ${status==="حاضر"?"selected":""}>حاضر</option>
+          <option value="غائب" ${status==="غائب"?"selected":""}>غائب</option>
+          <option value="متأخر" ${status==="متأخر"?"selected":""}>متأخر</option>
+        </select>
+      </div>`;
+    }).join("");
     const tr = document.createElement("tr");
-    tr.innerHTML=`
-      <td>${cls.subject}</td>
-      <td>${teachersMap.get(cls.teacherId)||''}</td>
+    tr.innerHTML = `
+      <td style="background:${instituteData.colors?.subjectColor||'#eef4ff'}">${cls.subject}</td>
+      <td>${teacherName}</td>
       <td>${cls.group}</td>
       <td>${cls.day}</td>
-      <td>${cls.time}</td>
-      <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+      <td>${cls.startTime}</td>
+      <td>${cls.endTime}</td>
+      <td>${studentCells}</td>
     `;
-    classesTableBody.appendChild(tr);
+    tableBody.appendChild(tr);
+  });
+
+  // إضافة حدث حفظ التغييرات على الطلاب
+  document.querySelectorAll(".status-select").forEach(sel=>{
+    sel.addEventListener("change", async e=>{
+      const classId = sel.dataset.class;
+      const studentId = sel.dataset.student;
+      const value = sel.value;
+
+      const clsRef = doc(db,"classes",classId);
+      const clsData = classesData.find(c=>c.id===classId);
+      const attendance = clsData.attendance.filter(a=>a.id!==studentId);
+      if(value) attendance.push({id: studentId, status:value});
+      await updateDoc(clsRef,{attendance});
+      clsData.attendance = attendance;
+    });
   });
 }
 
-// حذف حصة
-window.deleteClass = async(id)=>{
-  if(confirm("هل تريد حذف الحصة؟")){
-    await deleteDoc(doc(db,"classes",id));
-    loadClasses();
-  }
-}
-
-// فلاتر البحث
-[filterSubject,filterTeacher,filterGroup,filterDay].forEach(el=>{
-  el.addEventListener("input", renderClassesTable);
+// تطبيق الفلتر
+filterBtn.addEventListener("click", ()=>{ 
+  loadClasses({
+    subject: filterSubject.value,
+    teacher: filterTeacher.value,
+    group: filterGroup.value,
+    day: filterDay.value
+  });
 });
 
-// زر الطباعة
-printBtn.addEventListener("click",()=>{
+// طباعة التقرير
+printBtn.addEventListener("click", ()=>{
   window.print();
 });
+
 </script>
 </body>
 </html>
